--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "nrc.doc.tar.xz": be925316217cf6cdb52c3c847dcc6c2d91441476
-  "nrc.source.tar.xz": 1c281589db92bc6ad74542931e792276a4ea5618
-  "nrc.tar.xz": 778c2be441929b08edfc7bd572b3cae01586c51a
+  nrc.doc.tar.xz: 43e28171ada3dd368ddd4aa469b70d3411103408
+  nrc.source.tar.xz: 86f61569dffbd751ed4624458fd5b6a5d1229c22
+  nrc.tar.xz: e9c470af57f5e0140d9586ae136b562f7468bb2c
